--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -16,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
